
- Implemented feature #11047: Make ConvertToDDL() methods accept the database
  name instead of only the database handler.
- Fixed bug #11281: DatabaseSchema's XML reader does not understand '1' for
  the notnull, autoincrement and unsigned fields.
- Fixed bug #11282: DatabaseSchema's SQLite reader doesn't understand the
  float and varchar data types.


1.2 - Monday 02 July 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #11059: PersistentObjectDatabaseSchemaTiein: Boolean fields not
  recognized correctly.
- Documentation updates.


1.2beta2 - Thursday 31 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10768: PersistentObjectDatabaseSchemaTiein: Class prefix not
  reflected in definition file names.
- Fixed issue #10769: PersistentObjectDatabaseSchemaTiein: Generated
  getState() expects parameter.
- Fixed issue #10804: Adding auto increment to field fails with Oracle and
  SQLite.


1.2beta1 - Monday 07 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #10113: Testing DatabaseSchema silently quits.
- Fixed issue #10115: Reserved keywords are not quoted when used as table
  or field names.
- Fixed issue #10286: Missing "throw new" before
  ezcBaseFilePermissionException.
- Fixed issue #10365: "true" and "false" are handled incorrectly while parsing
  schemas from XML files.
- Fixed issue #10398: Oracle tests of DatabaseSchema run into error.
- Fixed issue #10548: DatabaseSchema uses different sequence names for Oracle
  and PostgreSQL.
- Fixed issue #10630: Call-time pass-by-reference warning in Oracle handler.
- Implemented feature #9584: Switch for overwriting files.
  (PersistentObjectDatabaseSchemaTiein)
- Implemented feature #9874: ezcDbSchema[DB]Reader custom table schema class.
- Implemented feature #8418: Generate class files as well.
  (PersistentObjectDatabaseSchemaTiein)

